	polling instead of poll(). Use inotify to watch new event devices
	appear in /dev/input. This effectively fixes our disappearing
	event devices issues after suspend. YAY.
	- pommed: add support for the external Apple USB keyboards, white
	& alu. If you have such a keyboard with another USB ID, please
	contact me. Patch from Carmine 'earcar' Paolino <earcar@gmail.com>.

version 1.10:
	- pommed: add a beeper feature as a substitute to the missing PC
	Speaker. The feature is disabled by default, as not all machines
	need it and not everybody wants it ;)

version 1.9:
	- pommed: add an idle timer to automatically switch off the
	keyboard backlight. Suggested by Javier Marcet.
	- pommed: turn has_kbd_backlight() into an inline function.
	- pommed: kill code duplication in the main loop.

version 1.8:
	- pommed: probe for the applesmc sysfs path in the ambient light
	handling code. The path has changed in Linux 2.6.22.
	- pommed: added automatic LCD backlight dimming when switching
	from AC to battery power (and vice-versa).
	- pommed: send out DBus notification when the automatic LCD
	backlight dimming kicks in (similar to the automatic keyboard
	backlight notification).
	- gpomme: adjust for the new LCD backlight notification.
	- Add the gpomme icon contributed by Jan Larres
	<jan@majutsushi.net> under the icons/ directory.
	- pommed: add support for the nVidia GeForce 8600M GT found in the
	MacBookPro3,1. I don't like that code, if there's something better
	that can be used, please mail me.

version 1.7:
	- pommed: add partial support for the MacBookPro3,1 (Core2 Duo,
	15" & 17", June 2007). New Apple IR receiver too. Missing nVidia
	backlight control.

version 1.6:
	- pommed: add new "Apple Inc." vendor ID in SMBIOS routine.

version 1.5:
	- pommed: back to using eject(1) for CD ejection.
	- pommed: fallback to of_find_node_by_name() for LMU controller
	detection; it seems some PowerBooks (5,4) do not have a node type
	associated with the node in the device-tree.
